--- a/trunk/coccinella/CHANGES
+++ b/trunk/coccinella/CHANGES
@@ -5,13 +5,16 @@
 
 Not to mention all bugfixes and rewrites.
 
-Coccinella-0.96.10 (200807??)
+Coccinella-0.96.10 (200809??)
 
  o optimized program startup to be faster
  o many icons and icon sets now moved inside the theme hierarchy
  o sound themes now belongs to a theme
  o the login dialog can now be used to edit and create profiles
-
+ o Oxygen icon and emoticon theme
+ o control panel with slots
+ o search people slot
+ o experimental support for chat styles enabled by default
 
 Coccinella-0.96.8 (20080430)
 
