--- a/trunk/coccinella/themes/Oxygen/AUTHORS
+++ b/trunk/coccinella/themes/Oxygen/AUTHORS
@@ -4,6 +4,8 @@ Some icons are created by Sander Devrieze and may be based on existing Oxygen ic
 
 hi icons from Kolourpaint (draw-oval, draw-rect, draw-line, draw-poly) are made by Nuno Pinheiro and Danny Allen.
 
+draw-arc is stolen from Gimp and slightly changed (Thank You!).
+
 mood-* icons, activity-* icons, *tlen* icons and maybe a few others are from the Gajim project: http://gajim.org/
 
 A few icons and other graphics elements may come from the Crystal icon set
