--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,7 @@
 
 Not to mention all bugfixes and rewrites.
 
-Coccinella-0.96.10 (200809??)
+Coccinella-0.96.10 (20080924)
 
  o optimized program startup to be faster
  o many icons and icon sets now moved inside the theme hierarchy
