--- a/trunk/coccinella/themes/Oxygen/AUTHORS
+++ b/trunk/coccinella/themes/Oxygen/AUTHORS
@@ -7,6 +7,7 @@ Icons created by Nuno Pinheiro and Danny Allen (hicolor icon set of Kolourpaint)
 draw-arc, colorSelSwap and colorSelBW are stolen from Gimp and slightly changed (Thank You!).
 mood-* icons, activity-* icons, *tlen*, protocol-mrim icons and maybe a few others are from the Gajim project: http://gajim.org/
 protocol-facebook is created by Jakub Szypulka for the pidgin-facebookchat project: http://code.google.com/p/pidgin-facebookchat/
+protocol-myspaceim, protocol-sametime are created by Hylke Bons
 
 All icons are (re)licensed as GPLv3
 
