--- a/trunk/coccinella/AUTHORS.txt
+++ b/trunk/coccinella/AUTHORS.txt
@@ -8,7 +8,8 @@ Translations:
                           Agustin Vericat <agustin at grupoikusnet.com>
                           Antonio F. Cano <antonio at grupoikusnet.com>
                           Néstor Díaz <n3storm at grupoikusnet.com>
-  French:                 Nicolas Vérité <nicolas.verite at gmail.com>
+  French:                 Dominique Bonjour <dombonj at gmail.com>
+                          Nicolas Vérité <nicolas.verite at gmail.com>
   Italian:                Mirko Graziani <contatto at imatica.it>
   Korean:                 Dylan Park, Korea NVC Center <hanmaum AT krnvc.org>
   Dutch:                  Sander Devrieze <sander at sanderdevrieze.net>
