--- a/po/nl.po
+++ b/po/nl.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: https://bugs.launchpad.net/coccinella/+filebug\n"
-"POT-Creation-Date: 2009-08-17 08:04+0200\n"
-"PO-Revision-Date: 2009-08-17 08:09+0100\n"
+"POT-Creation-Date: 2009-08-17 08:46+0200\n"
+"PO-Revision-Date: 2009-08-17 08:47+0100\n"
 "Last-Translator: Sander Devrieze <sander at sanderdevrieze.net>\n"
 "Language-Team: Dutch\n"
 "MIME-Version: 1.0\n"
@@ -1952,7 +1952,6 @@ msgid "Playing sports"
 msgstr "Sporten"
 
 #: ../components/UserActivity.tcl:343
-#: ../whiteboard/WDialogs.tcl:188
 msgid "Running"
 msgstr "Lopen"
 
@@ -3448,10 +3447,9 @@ msgid "away"
 msgstr "afwezig"
 
 #: ../jabber/GroupChat.tcl:189
-#, fuzzy
 #| msgid "Pretty format"
 msgid "free for chat"
-msgstr "Elegante opmaak"
+msgstr "vrij voor chat"
 
 #. TRANSLATORS; presence state when the user don't wants to be interrupted, except in really urgent circumstances
 #: ../jabber/GroupChat.tcl:191
@@ -6693,6 +6691,11 @@ msgstr "nee"
 #: ../whiteboard/WDialogs.tcl:169
 msgid "yes"
 msgstr "ja"
+
+#: ../whiteboard/WDialogs.tcl:188
+#| msgid "Activity"
+msgid "Activated"
+msgstr "Geactiveerd"
 
 #: ../whiteboard/WDialogs.tcl:194
 msgid "Buffering support"
