--- a/po/fr.po
+++ b/po/fr.po
@@ -1,4 +1,4 @@
-﻿# translation of fr.po to French
+# translation of fr.po to French
 # French translations for Coccinella package.
 # Copyright (C) 2009 The Coccinella Project
 # This file is distributed under the same license as the Coccinella package.
