--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,15 @@
 
 Not to mention all bugfixes and rewrites.
 
+Coccinella-0.96.14 (20090923)
+
+ o /clean and /retain commands
+ o release of new icon themes
+ o option to select sound device
+ o fixed whiteboard file transfer
+ o fixed annoying bug when typing long texts in chat dialog
+ o fixed external IP detection
+
 Coccinella-0.96.12 (20090318)
 
  o switch to gettext for translations
