--- a/trunk/coccinella/AUTHORS.txt
+++ b/trunk/coccinella/AUTHORS.txt
@@ -31,7 +31,7 @@ Patches:
   Mirko Graziani <contatto at imatica.it>
 
 Founder and former maintainer:
-  Mats Bentsson [http://coccinella.im/mats-bengtsson]
+  Mats Bengtsson [http://coccinella.im/mats-bengtsson]
 
 Maintainer:
   Sander Devrieze <sander at sanderdevrieze.net>
